🚀 Correction SEO + Workflow YAML validé

--- a/en/about.html
+++ b/en/about.html
@@ -1,49 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>About – HotProd</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="HotProd is led by Laurent Garnier, expert in industrialization and innovation with 15+ years of experience in Europe and Asia.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>About – HotProd</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : about – hotprod." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="About – HotProd" property="og:title"/><meta content="Découvrez les solutions HotProd : about – hotprod." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/en/about.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="About – HotProd" name="twitter:title"/><meta content="Découvrez les solutions HotProd : about – hotprod." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="about.html" style="text-decoration:underline;">About</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="contact.html" class="cta-top">Contact</a>
-      <a href="../fr/about.html">FR</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand"><h1>HotProd</h1></div>
+<nav class="desktop">
+<a href="index.html">Home</a>
+<a href="services.html">Services</a>
+<a href="about.html" style="text-decoration:underline;">About</a>
+<a href="testimonials.html">Testimonials</a>
+<a class="cta-top" href="contact.html">Contact</a>
+<a href="../fr/about.html">FR</a>
+</nav>
+</div>
 </header>
-
 <main class="container">
-  <div class="card">
-    <h2>About Laurent Garnier</h2>
-    <p><strong>Founder of HotProd</strong>, Laurent Garnier has over 15 years of experience in industrialization, mechatronics and innovation, across Europe and Asia.</p>
-
-    <ul style="margin-top:12px;">
-      <li>Industrialization and production leadership</li>
-      <li>Lean management and quality systems</li>
-      <li>IoT and robotics project experience</li>
-      <li>International coordination (France, China, Japan)</li>
-    </ul>
-
-    <h3 style="margin-top:20px;">Vision</h3>
-    <p>Delivering actionable solutions that combine technology and industrial excellence to drive sustainable business growth.</p>
-
-    <h3 style="margin-top:20px;">Languages</h3>
-    <p>Fluent in French and English – Conversational Spanish, Chinese, and German.</p>
-  </div>
+<div class="card">
+<h2>About Laurent Garnier</h2>
+<p><strong>Founder of HotProd</strong>, Laurent Garnier has over 15 years of experience in industrialization, mechatronics and innovation, across Europe and Asia.</p>
+<ul style="margin-top:12px;">
+<li>Industrialization and production leadership</li>
+<li>Lean management and quality systems</li>
+<li>IoT and robotics project experience</li>
+<li>International coordination (France, China, Japan)</li>
+</ul>
+<h3 style="margin-top:20px;">Vision</h3>
+<p>Delivering actionable solutions that combine technology and industrial excellence to drive sustainable business growth.</p>
+<h3 style="margin-top:20px;">Languages</h3>
+<p>Fluent in French and English – Conversational Spanish, Chinese, and German.</p>
+</div>
 </main>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
 </html>
