--- a/en/index.html
+++ b/en/index.html
@@ -1,60 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
+<script src="assets/schema-hotprod.jsonld" type="application/ld+json"></script>
 <head>
-  <meta charset="utf-8">
-  <title>HotProd — Accelerate your industrial transformation</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="HotProd helps high-tech companies industrialize products, reduce time-to-market and improve operational performance.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>HotProd — Accelerate your industrial transformation</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : hotprod — accelerate your industrial transformation." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="HotProd — Accelerate your industrial transformation" property="og:title"/><meta content="Découvrez les solutions HotProd : hotprod — accelerate your industrial transformation." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/en/index.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="HotProd — Accelerate your industrial transformation" name="twitter:title"/><meta content="Découvrez les solutions HotProd : hotprod — accelerate your industrial transformation." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">About</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="contact.html" class="cta-top">Contact / Book</a>
-      <a href="../fr/index.html">FR</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand"><h1>HotProd</h1></div>
+<nav class="desktop">
+<a href="index.html">Home</a>
+<a href="services.html">Services</a>
+<a href="about.html">About</a>
+<a href="testimonials.html">Testimonials</a>
+<a class="cta-top" href="contact.html">Contact / Book</a>
+<a href="../fr/index.html">FR</a>
+</nav>
+</div>
 </header>
-
 <section class="container hero">
-  <div>
-    <h2 style="font-size:1.9rem;margin:0">Accelerate your industrial transformation</h2>
-    <p style="margin-top:12px;color:var(--muted);max-width:680px">HotProd supports high-tech businesses to transform prototypes into reliable, scalable production — without operational chaos.</p>
-
-    <div style="margin-top:18px;">
-      <a class="btn" href="contact.html">Schedule a demo</a>
-      <a class="btn" style="background:#1f2937;margin-left:10px" href="services.html">See services</a>
-    </div>
-  </div>
-
-  <div class="hero-visual card">
-    <img src="../assets/hero-visual.png" alt="Visual" style="width:100%;display:block;object-fit:cover;height:100%">
-  </div>
+<div>
+<h2 style="font-size:1.9rem;margin:0">Accelerate your industrial transformation</h2>
+<p style="margin-top:12px;color:var(--muted);max-width:680px">HotProd supports high-tech businesses to transform prototypes into reliable, scalable production — without operational chaos.</p>
+<div style="margin-top:18px;">
+<a class="btn" href="contact.html">Schedule a demo</a>
+<a class="btn" href="services.html" style="background:#1f2937;margin-left:10px">See services</a>
+</div>
+</div>
+<div class="hero-visual card">
+<img alt="Visual" src="../assets/hero-visual.png" style="width:100%;display:block;object-fit:cover;height:100%"/>
+</div>
 </section>
-
 <section class="container card" style="margin-top:18px">
-  <h3 class="section-title">Core services</h3>
-  <div class="features">
-    <div class="feature"><h4>Product Industrialization</h4><p>From prototype to mass production: DFM, quality and supplier process improvements.</p></div>
-    <div class="feature"><h4>Technology & IoT</h4><p>Architecture, prototyping, and integration to capture product data and optimize performance.</p></div>
-    <div class="feature"><h4>Project Leadership</h4><p>Interim industrial leadership, lean operations and cross-functional program delivery.</p></div>
-  </div>
+<h3 class="section-title">Core services</h3>
+<div class="features">
+<div class="feature"><h4>Product Industrialization</h4><p>From prototype to mass production: DFM, quality and supplier process improvements.</p></div>
+<div class="feature"><h4>Technology &amp; IoT</h4><p>Architecture, prototyping, and integration to capture product data and optimize performance.</p></div>
+<div class="feature"><h4>Project Leadership</h4><p>Interim industrial leadership, lean operations and cross-functional program delivery.</p></div>
+</div>
 </section>
-
 <section class="container card" style="margin-top:18px">
-  <h3 class="section-title">Testimonials</h3>
-  <blockquote>“Laurent structured our production and cut our time-to-market.”</blockquote>
-  <p style="font-size:0.9rem;color:var(--muted)">— Industrial Director, IoT company</p>
+<h3 class="section-title">Testimonials</h3>
+<blockquote>“Laurent structured our production and cut our time-to-market.”</blockquote>
+<p style="font-size:0.9rem;color:var(--muted)">— Industrial Director, IoT company</p>
 </section>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier · Paris</p>
+<p>© 2025 HotProd — Laurent Garnier · Paris</p>
 </footer>
 </body>
 </html>
