--- a/en/services.html
+++ b/en/services.html
@@ -1,43 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Services – HotProd</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="HotProd services: product industrialization, technology innovation, project management, and team training.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>Services – HotProd</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : services – hotprod." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="Services – HotProd" property="og:title"/><meta content="Découvrez les solutions HotProd : services – hotprod." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/en/services.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="Services – HotProd" name="twitter:title"/><meta content="Découvrez les solutions HotProd : services – hotprod." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Home</a>
-      <a href="services.html" style="text-decoration:underline;">Services</a>
-      <a href="about.html">About</a>
-      <a href="testimonials.html">Testimonials</a>
-      <a href="contact.html" class="cta-top">Contact</a>
-      <a href="../fr/services.html">FR</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand"><h1>HotProd</h1></div>
+<nav class="desktop">
+<a href="index.html">Home</a>
+<a href="services.html" style="text-decoration:underline;">Services</a>
+<a href="about.html">About</a>
+<a href="testimonials.html">Testimonials</a>
+<a class="cta-top" href="contact.html">Contact</a>
+<a href="../fr/services.html">FR</a>
+</nav>
+</div>
 </header>
-
 <main class="container">
-  <div class="card">
-    <h2>Our Expertise</h2>
-    <p>We support high-tech and industrial companies through every stage — from prototype to production.</p>
-
-    <div class="features">
-      <div class="feature"><h3>Product Industrialization</h3><p>From prototype to mass production — DFM, validation, supplier process optimization.</p></div>
-      <div class="feature"><h3>Technological Innovation</h3><p>Strategic technology recommendations, IoT and robotics integration, product architecture.</p></div>
-      <div class="feature"><h3>Project Management</h3><p>Agile & Lean management, global coordination, and industrial risk reduction.</p></div>
-      <div class="feature"><h3>Training & Coaching</h3><p>Workshops, technical training and continuous improvement programs for your teams.</p></div>
-    </div>
-  </div>
+<div class="card">
+<h2>Our Expertise</h2>
+<p>We support high-tech and industrial companies through every stage — from prototype to production.</p>
+<div class="features">
+<div class="feature"><h3>Product Industrialization</h3><p>From prototype to mass production — DFM, validation, supplier process optimization.</p></div>
+<div class="feature"><h3>Technological Innovation</h3><p>Strategic technology recommendations, IoT and robotics integration, product architecture.</p></div>
+<div class="feature"><h3>Project Management</h3><p>Agile &amp; Lean management, global coordination, and industrial risk reduction.</p></div>
+<div class="feature"><h3>Training &amp; Coaching</h3><p>Workshops, technical training and continuous improvement programs for your teams.</p></div>
+</div>
+</div>
 </main>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
 </html>
