--- a/en/testimonials.html
+++ b/en/testimonials.html
@@ -1,44 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Testimonials – HotProd</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="What our clients say about HotProd: results-driven industrialization and innovation support.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>Testimonials – HotProd</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : testimonials – hotprod." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="Testimonials – HotProd" property="og:title"/><meta content="Découvrez les solutions HotProd : testimonials – hotprod." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/en/testimonials.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="Testimonials – HotProd" name="twitter:title"/><meta content="Découvrez les solutions HotProd : testimonials – hotprod." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">About</a>
-      <a href="testimonials.html" style="text-decoration:underline;">Testimonials</a>
-      <a href="contact.html" class="cta-top">Contact</a>
-      <a href="../fr/testimonials.html">FR</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand"><h1>HotProd</h1></div>
+<nav class="desktop">
+<a href="index.html">Home</a>
+<a href="services.html">Services</a>
+<a href="about.html">About</a>
+<a href="testimonials.html" style="text-decoration:underline;">Testimonials</a>
+<a class="cta-top" href="contact.html">Contact</a>
+<a href="../fr/testimonials.html">FR</a>
+</nav>
+</div>
 </header>
-
 <main class="container">
-  <div class="card">
-    <h2>What clients say</h2>
-
-    <blockquote>“Laurent structured our IoT production and reduced our time-to-market by 30%.”</blockquote>
-    <p class="small-muted">— Industrial Director, robotics company</p>
-
-    <blockquote>“Clear, pragmatic and efficient guidance. Our quality processes improved significantly.”</blockquote>
-    <p class="small-muted">— COO, electronics startup</p>
-
-    <blockquote>“Excellent ability to coordinate international teams and foster continuous improvement culture.”</blockquote>
-    <p class="small-muted">— Production Manager, IoT company</p>
-  </div>
+<div class="card">
+<h2>What clients say</h2>
+<blockquote>“Laurent structured our IoT production and reduced our time-to-market by 30%.”</blockquote>
+<p class="small-muted">— Industrial Director, robotics company</p>
+<blockquote>“Clear, pragmatic and efficient guidance. Our quality processes improved significantly.”</blockquote>
+<p class="small-muted">— COO, electronics startup</p>
+<blockquote>“Excellent ability to coordinate international teams and foster continuous improvement culture.”</blockquote>
+<p class="small-muted">— Production Manager, IoT company</p>
+</div>
 </main>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
 </html>
