--- a/fr/index.html
+++ b/fr/index.html
@@ -1,86 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
+<script src="assets/schema-hotprod.jsonld" type="application/ld+json"></script>
 <head>
-  <meta charset="utf-8">
-  <title>HotProd — Accélérez votre transformation industrielle</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="HotProd aide les entreprises high-tech à industrialiser leurs produits, réduire les délais et améliorer la performance opérationnelle.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>HotProd — Accélérez votre transformation industrielle</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : hotprod — accélérez votre transformation industrielle." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="HotProd — Accélérez votre transformation industrielle" property="og:title"/><meta content="Découvrez les solutions HotProd : hotprod — accélérez votre transformation industrielle." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/fr/index.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="HotProd — Accélérez votre transformation industrielle" name="twitter:title"/><meta content="Découvrez les solutions HotProd : hotprod — accélérez votre transformation industrielle." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand">
-      <div class="logo"><img src="../assets/logo.png" alt="HotProd" style="height:36px"/></div>
-      <h1>HotProd</h1>
-    </div>
-    <nav class="desktop">
-      <a href="index.html">Accueil</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">À propos</a>
-      <a href="testimonials.html">Témoignages</a>
-      <a href="contact.html" class="cta-top">Contact / RDV</a>
-      <a href="../en/index.html">EN</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand">
+<div class="logo"><img alt="HotProd" src="../assets/logo.png" style="height:36px"/></div>
+<h1>HotProd</h1>
+</div>
+<nav class="desktop">
+<a href="index.html">Accueil</a>
+<a href="services.html">Services</a>
+<a href="about.html">À propos</a>
+<a href="testimonials.html">Témoignages</a>
+<a class="cta-top" href="contact.html">Contact / RDV</a>
+<a href="../en/index.html">EN</a>
+</nav>
+</div>
 </header>
-
 <section class="container hero">
-  <div>
-    <h2 style="font-size:1.9rem;margin:0">Accélérez votre transformation industrielle</h2>
-    <p style="margin-top:12px;color:var(--muted);max-width:680px">HotProd accompagne les entreprises high-tech pour transformer leurs prototypes en productions fiables et rentables — sans chaos opérationnel ni dépassements.</p>
-
-    <div style="margin-top:18px;">
-      <a class="btn" href="contact.html">Planifier une démo</a>
-      <a class="btn" style="background:#1f2937;margin-left:10px" href="services.html">Voir nos services</a>
-    </div>
-
-    <div class="logo-bar" style="margin-top:20px">
-      <span class="badge">15+ ans</span>
-      <div style="font-size:0.95rem;color:var(--muted)">Clients : start-ups IoT, industriels électroniques, robotique</div>
-    </div>
-
-    <div class="kpis" style="margin-top:18px">
-      <div class="kpi"><strong>40%</strong><div style="font-size:0.85rem;color:var(--muted)">Réduction time-to-market</div></div>
-      <div class="kpi"><strong>30%</strong><div style="font-size:0.85rem;color:var(--muted)">Réduction coûts</div></div>
-      <div class="kpi"><strong>>95%</strong><div style="font-size:0.85rem;color:var(--muted)">Satisfaction client</div></div>
-    </div>
-  </div>
-
-  <div class="hero-visual card">
-    <!-- mockup image or embed short demo video -->
-    <img src="../assets/hero-visual.png" alt="Visual" style="width:100%;display:block;object-fit:cover;height:100%">
-  </div>
+<div>
+<h2 style="font-size:1.9rem;margin:0">Accélérez votre transformation industrielle</h2>
+<p style="margin-top:12px;color:var(--muted);max-width:680px">HotProd accompagne les entreprises high-tech pour transformer leurs prototypes en productions fiables et rentables — sans chaos opérationnel ni dépassements.</p>
+<div style="margin-top:18px;">
+<a class="btn" href="contact.html">Planifier une démo</a>
+<a class="btn" href="services.html" style="background:#1f2937;margin-left:10px">Voir nos services</a>
+</div>
+<div class="logo-bar" style="margin-top:20px">
+<span class="badge">15+ ans</span>
+<div style="font-size:0.95rem;color:var(--muted)">Clients : start-ups IoT, industriels électroniques, robotique</div>
+</div>
+<div class="kpis" style="margin-top:18px">
+<div class="kpi"><strong>40%</strong><div style="font-size:0.85rem;color:var(--muted)">Réduction time-to-market</div></div>
+<div class="kpi"><strong>30%</strong><div style="font-size:0.85rem;color:var(--muted)">Réduction coûts</div></div>
+<div class="kpi"><strong>&gt;95%</strong><div style="font-size:0.85rem;color:var(--muted)">Satisfaction client</div></div>
+</div>
+</div>
+<div class="hero-visual card">
+<!-- mockup image or embed short demo video -->
+<img alt="Visual" src="../assets/hero-visual.png" style="width:100%;display:block;object-fit:cover;height:100%"/>
+</div>
 </section>
-
 <section class="container card" style="margin-top:18px">
-  <h3 class="section-title">Nos services clés</h3>
-  <div class="features">
-    <div class="feature"><h4>Industrialisation produit</h4><p>DFM, qualification, optimisation process et pilotage fournisseur pour la montée en série.</p></div>
-    <div class="feature"><h4>Innovation & IoT</h4><p>Architecture produit, intégration capteurs & dataflow, prototypage rapide.</p></div>
-    <div class="feature"><h4>Gestion projet & Lean</h4><p>Agilité industrielle, gouvernance produit et réduction des risques.</p></div>
-  </div>
+<h3 class="section-title">Nos services clés</h3>
+<div class="features">
+<div class="feature"><h4>Industrialisation produit</h4><p>DFM, qualification, optimisation process et pilotage fournisseur pour la montée en série.</p></div>
+<div class="feature"><h4>Innovation &amp; IoT</h4><p>Architecture produit, intégration capteurs &amp; dataflow, prototypage rapide.</p></div>
+<div class="feature"><h4>Gestion projet &amp; Lean</h4><p>Agilité industrielle, gouvernance produit et réduction des risques.</p></div>
+</div>
 </section>
-
 <section class="container" style="margin-top:18px">
-  <div class="card">
-    <h3 class="section-title">Étude rapide — Prenons 15 min</h3>
-    <p class="small-muted">Réservez un créneau pour discuter de votre projet. Aucune obligation commerciale.</p>
-    <p style="margin-top:12px">
-      <a class="btn" href="contact.html">Planifier une démo</a>
-      <a class="btn" style="background:#1f2937;margin-left:10px" href="https://calendly.com/l-garnier/30min" target="_blank">📅 Prendre rendez-vous</a>
-    </p>
-  </div>
+<div class="card">
+<h3 class="section-title">Étude rapide — Prenons 15 min</h3>
+<p class="small-muted">Réservez un créneau pour discuter de votre projet. Aucune obligation commerciale.</p>
+<p style="margin-top:12px">
+<a class="btn" href="contact.html">Planifier une démo</a>
+<a class="btn" href="https://calendly.com/l-garnier/30min" style="background:#1f2937;margin-left:10px" target="_blank">📅 Prendre rendez-vous</a>
+</p>
+</div>
 </section>
-
 <section class="container card" style="margin-top:18px">
-  <h3 class="section-title">Témoignages</h3>
-  <blockquote>« Laurent a structuré notre production et réduit notre time-to-market. »</blockquote>
-  <p style="font-size:0.9rem;color:var(--muted)">— Directeur industriel, société IoT</p>
+<h3 class="section-title">Témoignages</h3>
+<blockquote>« Laurent a structuré notre production et réduit notre time-to-market. »</blockquote>
+<p style="font-size:0.9rem;color:var(--muted)">— Directeur industriel, société IoT</p>
 </section>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier · Paris · <a href="contact.html" style="color:#fff">Contact</a></p>
+<p>© 2025 HotProd — Laurent Garnier · Paris · <a href="contact.html" style="color:#fff">Contact</a></p>
 </footer>
 </body>
 </html>
