--- a/fr/testimonials.html
+++ b/fr/testimonials.html
@@ -1,49 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>Témoignages – HotProd</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Découvrez les témoignages clients sur les missions de transformation industrielle menées par HotProd.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>Témoignages – HotProd</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : témoignages – hotprod." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="Témoignages – HotProd" property="og:title"/><meta content="Découvrez les solutions HotProd : témoignages – hotprod." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/fr/testimonials.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="Témoignages – HotProd" name="twitter:title"/><meta content="Découvrez les solutions HotProd : témoignages – hotprod." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Accueil</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">À propos</a>
-      <a href="testimonials.html" style="text-decoration:underline;">Témoignages</a>
-      <a href="contact.html" class="cta-top">Contact</a>
-      <a href="../en/testimonials.html">EN</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand"><h1>HotProd</h1></div>
+<nav class="desktop">
+<a href="index.html">Accueil</a>
+<a href="services.html">Services</a>
+<a href="about.html">À propos</a>
+<a href="testimonials.html" style="text-decoration:underline;">Témoignages</a>
+<a class="cta-top" href="contact.html">Contact</a>
+<a href="../en/testimonials.html">EN</a>
+</nav>
+</div>
 </header>
-
 <main class="container">
-  <div class="card">
-    <h2>Témoignages de nos clients</h2>
-    <blockquote>
+<div class="card">
+<h2>Témoignages de nos clients</h2>
+<blockquote>
       « Laurent a structuré notre production IoT et réduit notre time-to-market de 30%. »
     </blockquote>
-    <p class="small-muted">— Directeur industriel, société de robotique</p>
-
-    <blockquote>
+<p class="small-muted">— Directeur industriel, société de robotique</p>
+<blockquote>
       « Un accompagnement clair, pragmatique et efficace. La qualité des process s’est nettement améliorée. »
     </blockquote>
-    <p class="small-muted">— COO, start-up électronique</p>
-
-    <blockquote>
+<p class="small-muted">— COO, start-up électronique</p>
+<blockquote>
       « Excellente capacité à fédérer des équipes internationales et à instaurer une culture d’amélioration continue. »
     </blockquote>
-    <p class="small-muted">— Responsable production, entreprise IoT</p>
-  </div>
+<p class="small-muted">— Responsable production, entreprise IoT</p>
+</div>
 </main>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
 </html>
