--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
+<script src="assets/schema-hotprod.jsonld" type="application/ld+json"></script>
 <head>
-  <meta charset="utf-8">
-  <title>HotProd — Conseil en industrialisation</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="assets/style.css">
-  <meta name="description" content="HotProd accompagne les entreprises high-tech pour industrialiser leurs produits, optimiser la production et accélérer l'innovation.">
-</head>
+<meta charset="utf-8"/>
+<title>HotProd — Conseil en industrialisation</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<link href="assets/style.css" rel="stylesheet"/>
+<meta content="Découvrez les solutions HotProd : hotprod — conseil en industrialisation." name="description"/>
+<meta content="index,follow" name="robots"/><meta content="HotProd — Conseil en industrialisation" property="og:title"/><meta content="Découvrez les solutions HotProd : hotprod — conseil en industrialisation." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/index.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="HotProd — Conseil en industrialisation" name="twitter:title"/><meta content="Découvrez les solutions HotProd : hotprod — conseil en industrialisation." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
-  <main style="text-align:center;padding:100px 16px">
-    <h1>HotProd</h1>
-    <p style="font-size:1.05rem;color:#333;max-width:700px;margin:12px auto">Conseil en industrialisation et innovation technologique — choisissez votre langue</p>
-    <p style="margin-top:18px">
-      <a class="btn" href="fr/index.html">🇫🇷 Français</a>
-      <a class="btn" style="margin-left:12px" href="en/index.html">🇬🇧 English</a>
-    </p>
-  </main>
+<main style="text-align:center;padding:100px 16px">
+<h1>HotProd</h1>
+<p style="font-size:1.05rem;color:#333;max-width:700px;margin:12px auto">Conseil en industrialisation et innovation technologique — choisissez votre langue</p>
+<p style="margin-top:18px">
+<a class="btn" href="fr/index.html">🇫🇷 Français</a>
+<a class="btn" href="en/index.html" style="margin-left:12px">🇬🇧 English</a>
+</p>
+</main>
 </body>
 </html>
