--- a/en/contact.html
+++ b/en/contact.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>HotProd – Industrial Consulting</title>
-<link rel="stylesheet" href="../assets/style.css">
-</head>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="Découvrez les solutions HotProd : hotprod – industrial consulting." name="description"/><meta content="index,follow" name="robots"/><meta content="HotProd – Industrial Consulting" property="og:title"/><meta content="Découvrez les solutions HotProd : hotprod – industrial consulting." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/en/contact.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="HotProd – Industrial Consulting" name="twitter:title"/><meta content="Découvrez les solutions HotProd : hotprod – industrial consulting." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <h1>HotProd – Industrial Consulting</h1>
-  <nav><a href="index.html">Home</a> | <a href="services.html">Services</a> | <a href="about.html">About</a> | <a href="testimonials.html">Testimonials</a> | <a href="contact.html">Contact</a></nav>
-  <div class="lang-switch"><a href="../fr/index.html">🇫🇷 Version française</a></div>
+<h1>HotProd – Industrial Consulting</h1>
+<nav><a href="index.html">Home</a> | <a href="services.html">Services</a> | <a href="about.html">About</a> | <a href="testimonials.html">Testimonials</a> | <a href="contact.html">Contact</a></nav>
+<div class="lang-switch"><a href="../fr/index.html">🇫🇷 Version française</a></div>
 </header>
 <main>
-<h2>Contact</h2><p>Get in touch for collaboration or project inquiries:</p><form><label>Name:</label><input type='text'><br><label>Company:</label><input type='text'><br><label>Email:</label><input type='email'><br><label>Phone:</label><input type='tel'><br><label>Message:</label><textarea></textarea><br><button>Send</button></form><p>📍 Paris, France<br>📧 l.garnier@hotmail.com<br>📞 +33 664 247 740</p>
+<h2>Contact</h2><p>Get in touch for collaboration or project inquiries:</p><form><label>Name:</label><input type="text"/><br/><label>Company:</label><input type="text"/><br/><label>Email:</label><input type="email"/><br/><label>Phone:</label><input type="tel"/><br/><label>Message:</label><textarea></textarea><br/><button>Send</button></form><p>📍 Paris, France<br/>📧 l.garnier@hotmail.com<br/>📞 +33 664 247 740</p>
 </main>
 <footer>
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
 </html>
