--- a/fr/about.html
+++ b/fr/about.html
@@ -1,49 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>À propos – HotProd</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="HotProd – dirigé par Laurent Garnier, expert en industrialisation et innovation avec plus de 15 ans d’expérience en Europe et en Asie.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>À propos – HotProd</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : à propos – hotprod." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="À propos – HotProd" property="og:title"/><meta content="Découvrez les solutions HotProd : à propos – hotprod." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/fr/about.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="À propos – HotProd" name="twitter:title"/><meta content="Découvrez les solutions HotProd : à propos – hotprod." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Accueil</a>
-      <a href="services.html">Services</a>
-      <a href="about.html" style="text-decoration:underline;">À propos</a>
-      <a href="testimonials.html">Témoignages</a>
-      <a href="contact.html" class="cta-top">Contact</a>
-      <a href="../en/about.html">EN</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand"><h1>HotProd</h1></div>
+<nav class="desktop">
+<a href="index.html">Accueil</a>
+<a href="services.html">Services</a>
+<a href="about.html" style="text-decoration:underline;">À propos</a>
+<a href="testimonials.html">Témoignages</a>
+<a class="cta-top" href="contact.html">Contact</a>
+<a href="../en/about.html">EN</a>
+</nav>
+</div>
 </header>
-
 <main class="container">
-  <div class="card">
-    <h2>À propos de Laurent Garnier</h2>
-    <p><strong>Fondateur de HotProd</strong>, Laurent Garnier possède plus de 15 ans d’expérience dans l’industrialisation, la mécatronique et l’innovation technologique, en France, en Europe et en Asie.</p>
-
-    <ul style="margin-top:12px;">
-      <li>Direction industrielle et industrialisation produits high-tech</li>
-      <li>Expertise Lean, supply chain et qualité</li>
-      <li>Projets IoT, robotique et mécatronique</li>
-      <li>Expérience à l’international (France, Chine, Japon)</li>
-    </ul>
-
-    <h3 style="margin-top:20px;">Vision</h3>
-    <p>Offrir des solutions concrètes qui allient excellence industrielle et innovation technologique, pour aider les entreprises à croître durablement.</p>
-
-    <h3 style="margin-top:20px;">Langues</h3>
-    <p>Français, anglais courant — espagnol, chinois, allemand (conversationnel)</p>
-  </div>
+<div class="card">
+<h2>À propos de Laurent Garnier</h2>
+<p><strong>Fondateur de HotProd</strong>, Laurent Garnier possède plus de 15 ans d’expérience dans l’industrialisation, la mécatronique et l’innovation technologique, en France, en Europe et en Asie.</p>
+<ul style="margin-top:12px;">
+<li>Direction industrielle et industrialisation produits high-tech</li>
+<li>Expertise Lean, supply chain et qualité</li>
+<li>Projets IoT, robotique et mécatronique</li>
+<li>Expérience à l’international (France, Chine, Japon)</li>
+</ul>
+<h3 style="margin-top:20px;">Vision</h3>
+<p>Offrir des solutions concrètes qui allient excellence industrielle et innovation technologique, pour aider les entreprises à croître durablement.</p>
+<h3 style="margin-top:20px;">Langues</h3>
+<p>Français, anglais courant — espagnol, chinois, allemand (conversationnel)</p>
+</div>
 </main>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
 </html>
