--- a/fr/contact.html
+++ b/fr/contact.html
@@ -1,66 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>Contact – HotProd</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Contactez HotProd pour une étude d'industrialisation, une démo ou un audit.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>Contact – HotProd</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="Découvrez les solutions HotProd : contact – hotprod." name="description"/>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="index,follow" name="robots"/><meta content="Contact – HotProd" property="og:title"/><meta content="Découvrez les solutions HotProd : contact – hotprod." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/fr/contact.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="Contact – HotProd" name="twitter:title"/><meta content="Découvrez les solutions HotProd : contact – hotprod." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Accueil</a>
-      <a href="services.html">Services</a>
-      <a href="about.html">À propos</a>
-      <a href="testimonials.html">Témoignages</a>
-      <a href="../en/contact.html">EN</a>
-    </nav>
-  </div>
+<div class="header-inner">
+<div class="brand"><h1>HotProd</h1></div>
+<nav class="desktop">
+<a href="index.html">Accueil</a>
+<a href="services.html">Services</a>
+<a href="about.html">À propos</a>
+<a href="testimonials.html">Témoignages</a>
+<a href="../en/contact.html">EN</a>
+</nav>
+</div>
 </header>
-
 <main class="container">
-  <div class="card">
-    <h2>Contactez-nous ou réservez un créneau</h2>
-    <p class="small-muted">Remplissez le formulaire ci-dessous ou prenez directement rendez-vous.</p>
-
-    <form action="https://formspree.io/f/FORMSPREE_ENDPOINT" method="POST">
-      <div class="form-row">
-        <div>
-          <label>Nom</label>
-          <input type="text" name="name" required>
-        </div>
-        <div>
-          <label>Entreprise</label>
-          <input type="text" name="company">
-        </div>
-      </div>
-      <label>Email</label>
-      <input type="email" name="email" required>
-      <label>Téléphone</label>
-      <input type="tel" name="phone">
-      <label>Message</label>
-      <textarea name="message" rows="5"></textarea>
-      <input type="hidden" name="_subject" value="Contact HotProd">
-      <div style="margin-top:12px">
-        <button class="btn" type="submit">Envoyer</button>
-        <a class="btn" style="background:#1f2937;margin-left:10px" href="https://calendly.com/l-garnier/30min" target="_blank">📅 Prendre rendez-vous</a>
-      </div>
-    </form>
-
-    <p class="small-muted" style="margin-top:12px">Nous répondons en général sous 24h.</p>
-  </div>
-
-  <div style="margin-top:18px" class="card">
-    <h4>Coordonnées</h4>
-    <p>Paris, France · l.garnier@hotmail.com · +33 6 64 24 77 40</p>
-  </div>
+<div class="card">
+<h2>Contactez-nous ou réservez un créneau</h2>
+<p class="small-muted">Remplissez le formulaire ci-dessous ou prenez directement rendez-vous.</p>
+<form action="https://formspree.io/f/FORMSPREE_ENDPOINT" method="POST">
+<div class="form-row">
+<div>
+<label>Nom</label>
+<input name="name" required="" type="text"/>
+</div>
+<div>
+<label>Entreprise</label>
+<input name="company" type="text"/>
+</div>
+</div>
+<label>Email</label>
+<input name="email" required="" type="email"/>
+<label>Téléphone</label>
+<input name="phone" type="tel"/>
+<label>Message</label>
+<textarea name="message" rows="5"></textarea>
+<input name="_subject" type="hidden" value="Contact HotProd"/>
+<div style="margin-top:12px">
+<button class="btn" type="submit">Envoyer</button>
+<a class="btn" href="https://calendly.com/l-garnier/30min" style="background:#1f2937;margin-left:10px" target="_blank">📅 Prendre rendez-vous</a>
+</div>
+</form>
+<p class="small-muted" style="margin-top:12px">Nous répondons en général sous 24h.</p>
+</div>
+<div class="card" style="margin-top:18px">
+<h4>Coordonnées</h4>
+<p>Paris, France · l.garnier@hotmail.com · +33 6 64 24 77 40</p>
+</div>
 </main>
-
 <footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<p>© 2025 HotProd — Laurent Garnier</p>
 </footer>
 </body>
 </html>
