--- a/fr/services.html
+++ b/fr/services.html
@@ -1,58 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>Services – HotProd</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Découvrez les services HotProd : industrialisation, innovation technologique, gestion de projet et formation technique.">
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
+<meta charset="utf-8"/>
+<title>Services – HotProd</title>
+<link href="../assets/style.css" rel="stylesheet"/>
+<meta content="Découvrez les solutions HotProd : services – hotprod." name="description"/><meta content="width=device-width, initial-scale=1" name="viewport"/><meta content="index,follow" name="robots"/><meta content="Services – HotProd" property="og:title"/><meta content="Découvrez les solutions HotProd : services – hotprod." property="og:description"/><meta content="website" property="og:type"/><meta content="https://hot-prod.github.io/Webpage/fr/services.html" property="og:url"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" property="og:image"/><meta content="HotProd" property="og:site_name"/><meta content="summary_large_image" name="twitter:card"/><meta content="Services – HotProd" name="twitter:title"/><meta content="Découvrez les solutions HotProd : services – hotprod." name="twitter:description"/><meta content="https://hot-prod.github.io/Webpage/assets/hero-visual.png" name="twitter:image"/></head>
 <body>
 <header>
-  <div class="header-inner">
-    <div class="brand"><h1>HotProd</h1></div>
-    <nav class="desktop">
-      <a href="index.html">Accueil</a>
-      <a href="services.html" style="text-decoration:underline;">Services</a>
-      <a href="about.html">À propos</a>
-      <a href="testimonials.html">Témoignages</a>
-      <a href="contact.html" class="cta-top">Contact</a>
-      <a href="../en/services.html">EN</a>
-    </nav>
-  </div>
+<h1>Nos Services</h1>
+<nav>
+<a href="index.html">Accueil</a>
+<a href="services.html">Services</a>
+<a href="about.html">À propos</a>
+<a href="testimonials.html">Témoignages</a>
+<a href="contact.html">Contact</a>
+<a href="../en/services.html">EN</a>
+</nav>
 </header>
-
-<main class="container">
-  <div class="card">
-    <h2 class="section-title">Nos domaines d’expertise</h2>
-    <p>Nous accompagnons les entreprises industrielles et technologiques à chaque étape de la chaîne de valeur, du prototype à la production.</p>
-
-    <div class="features">
-      <div class="feature">
-        <h3>1. Industrialisation produit</h3>
-        <p>Passage du prototype à la production série : DFM, validation technique, pilotage des fournisseurs, optimisation process et qualité.</p>
-      </div>
-
-      <div class="feature">
-        <h3>2. Innovation technologique</h3>
-        <p>Recommandations stratégiques, intégration de solutions IoT, automatisation, robotique, systèmes connectés et innovation produit.</p>
-      </div>
-
-      <div class="feature">
-        <h3>3. Gestion de projet</h3>
-        <p>Management de projet industriel selon les approches Agile et Lean : planification, coordination internationale, risk management.</p>
-      </div>
-
-      <div class="feature">
-        <h3>4. Formation & coaching</h3>
-        <p>Ateliers Lean, formations techniques, coaching individuel pour renforcer les compétences internes et la culture d’amélioration continue.</p>
-      </div>
-    </div>
-  </div>
+<main>
+<section>
+<h2>Industrialisation de produits</h2>
+<p>De la conception au passage en production de masse : DFM, qualité, supply chain et gestion fournisseurs.</p>
+</section>
+<section>
+<h2>Innovation technologique</h2>
+<p>Développement de solutions IoT, robotiques et mécatroniques. Accompagnement à la transformation digitale.</p>
+</section>
+<section>
+<h2>Direction industrielle &amp; management de transition</h2>
+<p>Direction technique temporaire, structuration des processus, lean management et montée en compétence des équipes.</p>
+</section>
 </main>
-
-<footer class="footer">
-  <p>© 2025 HotProd — Laurent Garnier</p>
+<footer>
+<p>© 2025 HotProd – Excellence industrielle et technologique</p>
 </footer>
 </body>
 </html>
